# K8s-SRE-AI-Agent

./: .coverage  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  constraints.txt  deployment.md  docker-compose.yaml  explain.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
config/: clusters.example.yaml
deploy/helm/k8s-sre-agent/: Chart.yaml  values.yaml
deploy/helm/k8s-sre-agent/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
deploy/observability/: grafana-dashboard.json  prometheus-rules.yaml
deploy/policy/: kyverno-readonly-lock.yaml
deploy/rbac/: clusterrole-readonly.yaml  rolebinding-tenant-scoped.yaml  serviceaccount.yaml
docs/: README.md  architecture.md  cost-optimization.md  incident-scenarios.md  multi-cluster.md  operations.md  production-readiness.md  rag.md  rca-engine.md  security-rbac.md
evals/: README.md  run_eval.py
evals/cases/: adversarial.json  core.json
evals/model_eval/: README.md  run_model_eval.py
loadtest/: README.md  run_load.py  validate_behavior.py
scripts/: setup-stack.sh  teardown.sh
src/k8s_sre_agent/: __init__.py  auth.py  clusters.py  config.py  middleware.py  observability.py  ratelimit.py  resilience.py  server.py
src/k8s_sre_agent/rag/: __init__.py  embed.py  ingest.py  retrieve.py  store.py
src/k8s_sre_agent/rca/: __init__.py  correlate.py  detectors.py  engine.py  models.py
src/k8s_sre_agent/tools/: __init__.py  _http.py  cicd.py  gitops.py  incidents.py  istio.py  kubernetes.py  logs.py  metrics.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_auth_resilience.py  test_auth_verify.py  test_cicd_unit.py  test_cloud_auth.py  test_correlate.py  test_evals.py  test_gitops_unit.py  test_incidents_unit.py  test_integration_github.py  test_integration_gitlab.py  test_integration_gitops.py  test_integration_istio.py  test_integration_k8s_tools.py  test_integration_kind.py  test_integration_mcp_wire.py  test_integration_observability.py  test_integration_rag.py  test_integration_rbac.py  test_istio_unit.py  test_metrics_unit.py  test_middleware.py  test_model_eval.py  test_rag_unit.py  test_ratelimit.py  test_ratelimit_redis.py  test_rca.py  test_rca_degraded.py  test_server_unit.py  test_tools_incidents.py  test_tools_kubernetes.py  test_tools_logs.py  test_tools_metrics.py  test_webapp.py  test_webapp_auth.py
tests/fixtures/: argocd-apps.yaml  crashloop-deploy.yaml  istio-gateway.yaml  istio-mtls-sidecar.yaml  istio-scenario.yaml  scenarios.yaml  scenarios2.yaml  scenarios3.yaml  scenarios4.yaml
tests/fixtures/runbooks/: image-pull-failure.md  istio-mtls-conflict.md  oom-killed.md  payments-db-unreachable.md  pdb-blocks-drain.md
webapp/: README.md  __init__.py  agent_tools.py  auth.py  chat.py  server.py
webapp/static/: app.js  index.html  style.css
