[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-sre-agent"
version = "0.1.0"
description = "Enterprise read-only Kubernetes troubleshooting agent exposed to Claude over MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Platform Engineering" }]

dependencies = [
  "mcp>=1.2.0",              # Model Context Protocol server SDK (FastMCP)
  "kubernetes>=29.0.0",      # official k8s python client
  "httpx>=0.27.0",           # Prometheus / Loki / ArgoCD / Grafana / CI HTTP clients
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "pyyaml>=6.0",
  "python-json-logger>=2.0",
  "tenacity>=8.2",           # retry/backoff for flaky upstream APIs
  "starlette>=0.37",         # HTTP transport ASGI app + middleware
  "uvicorn>=0.30",           # ASGI server for the gateway deployment
  "pyjwt[crypto]>=2.8",      # OIDC / Entra bearer-token validation
  "prometheus-client>=0.20", # agent self-metrics (/metrics)
]

[project.optional-dependencies]
rag = [
  "psycopg[binary]>=3.1",    # PostgreSQL + pgvector
  "pgvector>=0.2.5",
  "anthropic>=0.39.0",       # embeddings via Voyage / fallback; client for self-test
]
azure = ["azure-identity>=1.16"]          # Entra ID / Workload Identity
aws = ["boto3>=1.34"]                      # EKS token / IRSA
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
k8s-sre-agent = "k8s_sre_agent.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
